# openden

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  app.js  connect_ssh.sh  package-lock.json  package.json
backend-1/routes/: newsletter.js
backend-1/utils/: email.js
backend/controllers/: newsletter.js
backend/model/: Contact.js
backend/src/: contact.rs  main.rs
public/: index.html  output.css
rsa-encrypt/: Cargo.toml  README.md
rsa-encrypt/pkg/: package.json  rsa_encrypt.d.ts  rsa_encrypt.js  rsa_encrypt_bg.js  rsa_encrypt_bg.wasm  rsa_encrypt_bg.wasm.d.ts
rsa-encrypt/src/: encryption.rs  hd.rs  lib.rs  mainxxx.rs
src/: App.js  Main.js  Router.js  config.js  index.js
src/net/: api.js  subscribe.js
src/pages/auth/: LogIn.js  SignUp.js
src/pages/dashboard/: Dashboard.js  MyFiles.js  SharedFiles.js
src/pages/home/: Home.js
src/pages/newsletter/: Newsletter.js
src/shared_components/: AppLayout.js  web_site_menus.js
test-wasm/: Cargo.toml
test-wasm/src/: lib.rs
