[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
dotenv = "0.15.0"
mail-builder = "0.2.4"
mail-send = "0.2.3"
mongodb = "2.3.1"
serde = "1.0.147"
serde_json = "1.0.87"
