[package]
name = "rsa-encrypt"
version = "0.1.0"
edition = "2021"
author = "@elielnfinic | @elielmathe(Twitter)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip32 = "0.4.0"
bip39 = "1.0.1"
rand = "0.8.5"
rand_core = "0.6.4"
wasm-bindgen = "0.2.83"
wee_alloc = "0.4.5"
getrandom = { version = "0.2", features = ["js"] }
k256 = "0.11.6"
rsa = "0.7.0"
base64 = "0.13.0"
bs58 = "0.4.0"
hex = "0.4.3"
rand_chacha = "0.3.1"

[lib]
crate-type = ["cdylib", "rlib"]